--- a/src/view/MainPage/MainPage.css
+++ b/src/view/MainPage/MainPage.css
@@ -4,7 +4,7 @@ body, html {
     height: 100%;
     font-family: Arial, sans-serif;
     background-color: #121212;
-    overflow: hidden; /* Prevent scrolling on the body */
+    overflow: hidden;
 
 }
 
