--- a/src/components/buttons/8buttons/ButtonGrid.css
+++ b/src/components/buttons/8buttons/ButtonGrid.css
@@ -1,6 +1,7 @@
 .control-panel {
     background-color: #282828;
-    padding: 1rem;
+    padding-top: 1rem;
+    padding-bottom: 0.5rem;
     display: inline-block;
     border-radius: 0.5rem;
 }
@@ -9,6 +10,7 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 0.5rem;
+    margin-bottom: 0.5rem;
 }
 
 .button {
