--- a/src/view/MainPage/MainPage.css
+++ b/src/view/MainPage/MainPage.css
@@ -22,7 +22,7 @@
     }
 
     .main-box {
-        @apply bg-[#282828] rounded-lg p-10 w-[430px] h-[930px] shadow-[0_4px_60px_rgba(0,0,0,0.5)] text-center flex flex-col items-center relative;
+        @apply bg-[#282828] rounded-lg p-10 w-[430px] h-[920px] shadow-[0_4px_60px_rgba(0,0,0,0.5)] text-center flex flex-col items-center relative;
     }
 
     .main-page__logo {
@@ -38,7 +38,7 @@
     }
 
     .main-page__button {
-        @apply bg-[#c1bb00] mt-10 text-white border-none rounded-[500px] py-[13px] text-base font-bold cursor-pointer w-full transition-colors duration-300;
+        @apply bg-[#c1bb00] text-white border-none rounded-[500px] py-[13px] text-base font-bold cursor-pointer w-full transition-colors duration-300;
     }
 
     .main-page__button:hover {
@@ -46,7 +46,7 @@
     }
 
     .main-page__button--transmitting {
-        @apply bg-[#E91429] mt-10 text-white border-none rounded-[500px] py-[13px] text-base font-bold cursor-pointer w-full transition-colors duration-300;
+        @apply bg-[#E91429] text-white border-none rounded-[500px] py-[13px] text-base font-bold cursor-pointer w-full transition-colors duration-300;
     }
 
     .main-page__button--transmitting:hover {
@@ -63,7 +63,7 @@
     }
 
     .main-page-button-off {
-        @apply bg-[#949494] mt-10 text-white border-none rounded-[500px] py-[13px] text-base font-bold cursor-pointer w-full transition-colors duration-300;
+        @apply bg-[#949494] text-white border-none rounded-[500px] py-[13px] text-base font-bold cursor-pointer w-full transition-colors duration-300;
     }
 
     .main-page-button-off:hover {
