--- a/src/components/buttons/Knob/Knob.css
+++ b/src/components/buttons/Knob/Knob.css
@@ -8,11 +8,11 @@
     }
 
     .rotating-knob {
-        @apply w-[60px] h-[60px] rounded-full bg-[#454545] border-2 border-[#afafaf] relative cursor-pointer;
+        @apply w-[3.75rem] h-[3.75rem] rounded-full bg-[#454545] border-2 border-[#afafaf] relative cursor-pointer;
     }
 
     .knob-indicator {
-        @apply absolute top-[-3px] left-1/2 w-[2px] h-[15px] bg-white -translate-x-1/2 border-r-[5px] border-transparent;
+        @apply absolute top-[-0.1875rem] left-1/2 w-[0.125rem] h-[0.9375rem] bg-white -translate-x-1/2 border-r-[0.3125rem] border-transparent;
     }
 
     .channel-display {
